[package]
name = "atr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socket2 = { version = "0.5.7" , features= ["all"]}
clap = { version = "4.5.11",  features = ["derive"]}
tokio = { version = "1.40.0", features = ["full"] }
futures = "0.3"
